--- a/console/src/main/resources/static/console-fe/package.json
+++ b/console/src/main/resources/static/console-fe/package.json
@@ -75,9 +75,10 @@
   },
   "dependencies": {
     "@alicloud/console-components": "^1.0.19",
+    "@alicloud/console-components-actions": "^1.0.4",
     "@alicloud/console-components-app-layout": "^1.0.4",
     "@alicloud/console-components-console-menu": "^1.0.4",
-    "@alicloud/console-components-actions": "^1.0.4",
+    "@alifd/next": "^1.25.47",
     "axios": "^0.18.0",
     "history": "^4.10.1",
     "jquery": "^3.3.1",
